<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryLight"
    tools:context=".FriendManage">

    <TextView
        android:id="@+id/myFriendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_friend"
        android:textSize="25sp"
        android:fontFamily="serif"
        android:textColor="?attr/textColorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        />

    <ListView
        android:id="@+id/myFriendListView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/myFriendTextView"
        app:layout_constraintLeft_toLeftOf="@id/myFriendListView"
        android:padding="20dp"
        />

    <TextView
        android:id="@+id/sendReqTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_friend_request"
        android:textSize="25sp"
        android:fontFamily="serif"
        android:textColor="?attr/colorText"
        app:layout_constraintTop_toBottomOf="@id/myFriendListView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sendReqTextView"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColorHint="?attr/textColorPrimary">

        <AutoCompleteTextView
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="?attr/colorText"
            android:shadowColor="?attr/colorPrimaryDark"
            android:singleLine="true"
            android:textColorHint="?attr/textColorPrimary"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sendReq"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_menu_background"
        android:text="@string/send_request"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailContainer" />

    <ProgressBar
        android:id="@+id/progressBarView"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/sendReq"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:id="@+id/playRequestLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/progressBarView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/friendName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/player_request_to_play"
            android:textAllCaps="false"
            android:textColor="?attr/textColorPrimary"
            android:textSize="25sp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">


            <Button
                android:id="@+id/acceptReq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_menu_background"
                android:fontFamily="sans-serif"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textColor="?attr/colorText"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/rejectReq"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />


            <Button
                android:id="@+id/rejectReq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_menu_background"
                android:fontFamily="sans-serif"
                android:text="@string/reject"
                android:textAllCaps="false"
                android:textColor="?attr/colorText"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/acceptReq"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />


        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>