<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiPlayerGame">

    <LinearLayout
        android:id="@+id/mainBoardTableLayout"
        android:layout_width="328dp"
        android:layout_height="328dp"
        android:background="?attr/board_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mainBoardTableLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <CheckBox
            android:checked="true"
            android:id="@+id/FirstPlayerCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/plOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimaryLight"
            android:text="@string/plOne"
            />
        <TextView
            android:id="@+id/OnePoint"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:textColor="?attr/colorPrimaryLight"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            />
        <TextView
            android:id="@+id/Vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/vs"
            android:text="@string/vs"
            android:gravity="center"
            android:textColor="?attr/colorText"
            android:fontFamily="serif"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/TwoPoint"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimaryLight"
            android:text="@string/_2"
            tools:ignore="TooManyViews" />
        <TextView
            android:id="@+id/plTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimaryLight"
            android:text="@string/playertwo"
            />
        <CheckBox
            android:id="@+id/SecondPlayerCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>




</android.support.constraint.ConstraintLayout>