<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".LoginOrNot">

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_login"
        app:layout_constraintRight_toLeftOf="@id/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:background="@drawable/btn_menu_background"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/signInAsGuest"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sing_in_as_guest"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimaryText"
        android:background="@drawable/btn_menu_background"
        android:textSize="20sp"
        />

    <Button
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:background="@drawable/btn_menu_background"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/login"

        />

</android.support.constraint.ConstraintLayout>